# augmented-rbtree

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  default.code-workspace  run_tests.sh
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml
benches/: tree_bench.rs
examples/: augmentation.rs  iterators.rs  visualization.rs
src/: alloc_proxy.rs  augment.rs  augmentations.rs  augmented_rbtree.rs  cursor.rs  entry.rs  interval_tree.rs  iterators.rs  layout.rs  lib.rs  node.rs  node_allocator.rs  policy.rs  search.rs  serde_impl.rs
tests/: allocator_api_tests.rs  allocator_tests.rs  augmentations_tests.rs  basic_tests.rs  cursor_tests.rs  drop_tests.rs  entry_tests.rs  fuzz_tests.rs  interval_tree_tests.rs  iterators_tests.rs  property_tests.proptest-regressions  property_tests.rs  rbtree_tests.rs  serde_tests.rs  stress_tests.rs  topology_tests.rs
tests/helpers/: common.rs  dumper.rs  limited_allocator.rs  mod.rs
tests/shared/: visual.rs
